chore: 同步本地修改和新增文件
📝 文档更新：
- 更新烧录工具和配置文件相关文档
- 更新AWRL6844EVM雷达参数配置文件清单
- 更新SBL烧录0秒问题分析文档
- 更新雷达配置文件研究README
- 删除过时的寻找项目规律文档

🆕 新增文件：
- 添加create_flash_icon.py（图标创建工具）
- 添加create_icon.py（配置工具图标创建）
- 添加支持雷达配置读取的固件列表文档
- 添加烧录进度条测试研究相关截图（6张）
- 添加codes.txt和batchstatus.txt

🗑️ 清理：
- 删除启动_AWRL6844固件管理系统.bat（已废弃）

🔧 配置更新：
- 更新config_calculator.py
- 更新batchstatus.txt

--- a/项目文档/1-需求与设计/烧录工具.md
+++ b/项目文档/1-需求与设计/烧录工具.md
@@ -427,24 +427,17 @@ v1.4.2
 
 3.释放端口功能无效,修正它
 
-
-
-
 项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.7
 
 0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
 
  1 标签页 烧录功能:端口设置,端口管理子标签合并为端口管理.合并后放在烧录操作下面
 
-
-
 项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.8
 
 0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
 
 1. 1.标签页 烧录功能 -固件文件: 里面的内容要随着鼠标左右拉扯界面而自适应,而不是固定
-
-
 
 项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.5.9
 
@@ -454,7 +447,6 @@ v1.4.2
    1.1 只释放选中的管理端口
    1.2  释放端口时只释放所选的端口的占用,但不能关闭应用.
 
-
 项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.0
 
 0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
@@ -462,29 +454,158 @@ v1.4.2
 1. 标签页 烧录功能 页面 将初始左边与右边边框默认启动时比例为3:7.
 2. 删除端口管理中监视COM3,监视COM4,监视COM4,管理端口,测试端口,释放端口功能. 保留烧录端口,数据输出端口,刷新,测试,SBL检测功能.并将SBL检测更名为板载SBL固件存在性检测. 另外将板载SBL固件存在性检测按钮另起一行
 
-
-
-
 项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.1
 
 0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
 
-1.标签页 烧录功能-烧录操作 中 
+1.标签页 烧录功能-烧录操作 中
 
 1.1完整烧录流程（SBL + App）无法正常烧录,见截图
 
 ![1766112841665](image/烧录工具/1766112841665.png)
 
-
 1.2 仅 SBL与仅APP 无法正常烧录,同样的错误见截图
 
 ![1766112917629](image/烧录工具/1766112917629.png)
-
-
-
 
 项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.2
 
 0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
 
 1.标签页 烧录功能-烧录操作 中
+
+1.1 删除烧录超时及相关的代码
+
+1.2 根据项目文档\3-固件工具\03-固件烧录测试, 重写标签页 烧录功能-烧录操作
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.3
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.深度学习D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具,D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\03-固件烧录测试,
+
+2. 删除D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具中的烧录操作中的所有脚本. . 根据D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\01-AWRL6844固件系统工具\5-Scripts\flash_tool.py逻辑方式调用选择的固件.然后根据D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\03-固件烧录测试重建3种烧录方式
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.4
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1. 操你妈,超时检测全部都删除了,为什么还存在.全部删除.
+2. . 🧭 SOP提示: S8=OFF, S7=OFF
+   ├─ ⚠️  请拔插USB或按RESET  操你妈,光提示有什么用. 要跳出窗口, 窗口内容见下图.人工确认后才能执行下一步,
+3. 上一步确认后,调出烧录端口窗口,让人工确认, 如果确认端口不对, 退出烧录.如果确认OK, 才能执行下一步烧录命令.
+4. 原始烧录命令输出什么结果,日志就显示什么结果,不要处理. 进度条采用直接输出的方式,不需要每一行输出.  直接采用命令输出的进度条,不要经过处理.我需要实时显示. 5. 整个APP 标签页烧录功能 初始化左边框与右边框要按照2:8比例,现在比例都差不多5:5了.
+
+![1766143675659](image/烧录工具/1766143675659.png)
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.5
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1..标签页 烧录功能-烧录操作中,增加 停止烧录 按钮及对应脚本.确保任何状况下都可以停止.
+
+2. 跳出确认的端口是错误的.烧录端口都是XDS110 Class Application/User UART , 当前电脑是COM3, 不管是sbl,app烧录端口都是这个.
+3. 第一个跳出的确认界面内容如图, 但你当前的内容不是.
+   4. 烧录功能 左边框与右边框1.64要求你调整了, 但没有任何变化.
+
+   ![1766150120859](image/烧录工具/1766150120859.png)
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.6
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+### 解决的问题
+
+1. **左右布局比例修复**
+   * 左侧控制面板固定300px宽度
+   * 右侧日志区域自适应剩余空间
+   * 使用 `Frame(width=300, weight=0)`和 `sashpos(0, 300)`强制初始布局
+2. **COM端口信息动态查询**
+   * 替换所有硬编码的"XDS110 Class Application/User UART"
+   * 使用[serial.tools.list_ports.comports()](vscode-file://vscode-app/c:/Users/Administrator/AppData/Local/Programs/Microsoft%20VS%20Code/resources/app/out/vs/code/electron-browser/workbench/workbench.html)实时查询端口描述
+   * 三个烧录功能（完整/仅SBL/仅App）全部修复
+
+### 📝 具体修改
+
+**[flash_tool.py](vscode-file://vscode-app/c:/Users/Administrator/AppData/Local/Programs/Microsoft%20VS%20Code/resources/app/out/vs/code/electron-browser/workbench/workbench.html) (v1.6.6)**
+
+* 完整烧录：动态查询sbl_port的描述信息
+* 仅SBL烧录：动态查询sbl_port的描述信息
+* 仅App烧录：动态查询app_port的描述信息
+* 日志和弹窗显示格式：`{端口} ({描述})`
+
+**tab_flash.py**
+
+* 左侧Frame固定宽度300px（`width=300, weight=0`）
+* 右侧Frame权重1（`weight=1`）自适应
+* 添加 `sashpos(0, 300)`强制初始分割位置
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.7
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+## 📋 完成情况总结
+
+### ✅ 任务1: 修复左右框架比例
+
+* **提交** : `f5c6a09` - "fix: 强制左侧面板宽度250px，添加pack_propagate防止撑大"
+* **实现** : 左侧面板固定250px，右侧自适应，使用[pack_propagate(False)](vscode-file://vscode-app/c:/Users/Administrator/AppData/Local/Programs/Microsoft%20VS%20Code/resources/app/out/vs/code/electron-browser/workbench/workbench.html)防止子组件撑大
+
+### ✅ 任务2: 实际查询COM端口描述
+
+* **提交** : `94c6171` - "feat: 更新固件工具到v1.6.6"
+* **实现** : 使用[serial.tools.list_ports.comports()](vscode-file://vscode-app/c:/Users/Administrator/AppData/Local/Programs/Microsoft%20VS%20Code/resources/app/out/vs/code/electron-browser/workbench/workbench.html)动态查询端口描述，替换硬编码文本
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.7
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.修复左右框架比例为3:7
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v1.6.8
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.标签页烧录功能-端口管理:
+
+1.2烧录端口(com3)修改为XDS110 Class Application/User UART ,内容显示的com3为动态的,不能是硬编码.
+
+1.3数据输出端口(COM4)修改为XDS110 Class Auxiliary Data Port,内容显示的com4为动态的,不能是硬编码.
+
+
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v2.4.0
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+1.将app 原定义为Ti AWRL6844固件烧录工具 更改为 Ti AWRL6844固件系统工具.
+
+2.标签页 固件管理-应用固件:
+
+2.1 搜索框另起一行
+
+2.2 标签应用固件 根据文件对应的应用参数添加更多的筛选条件
+
+
+3.标签页 固件管理-SBL固件:
+
+3.1 搜索框另起一行
+
+3.2 标签SBL固件 根据文件对应的应用参数添加更多的筛选条件
+
+
+
+4.标签页 固件管理-雷达配置:
+
+4.1 搜索框另起一行
+
+4.2 标签雷达配置 根据文件对应的应用参数添加更多的筛选条件
+
+
+
+项目文档\3-固件工具\01-AWRL6844固件系统工具 v2.4.3
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+
+1.标签页 固件管理-应用固件,SBL固件,智能匹配 中, 选中对应固件名,除了当前右键的复制文件名及路径功能,另外增加支持一键添加到烧录功能中的对应固件文件功能. 应用固件与SBL固件要分别对应.不要搞错了.
