--- a/项目文档/1-需求与设计/雷达配置文件相关提示词.md
+++ b/项目文档/1-需求与设计/雷达配置文件相关提示词.md
@@ -18,3 +18,26 @@
 8. **读取雷达丰富的检测数据功能**
 9. **从数据推断配置**功能.
 10. D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\05-雷达配置文件研究\README.md 学习此文件,推荐增加功能.
+
+
+
+
+
+D:\7.项目资料\Ti雷达项目\项目文档\3-固件工具\05-雷达配置文件研究\radar_config_tool.py  v1.0.1
+
+0.更新完脚本后,更新主程序的版本号. 同步更新github 本地与远程. 然后打开主APP,检查更行界面及功能
+
+主页面左框-配置文件选择-配置文件 修正如下:
+1.1 配置文件:后显示文件名,下方完全显示绝对路径,
+1.2 默认设置后 设置下拉框: 设置两个文件选择,C:\ti\radar_toolbox_3_30_00_06\tools\mmwave_data_recorder\src\cfg\6844_profile_4T4R_tdm.cfg,C:\ti\radar_toolbox_3_30_00_06\tools\Adc_Data_Capture_Tool_DCA1000_CLI\chirp_configs\xWRL6844_4T4R_tdm.cfg
+
+2.主页面右框-标签页 SDK 扫描 修正如下:
+2.1 增加删除目录 功能
+
+2.2 扫描出的文件中: 将相对路径更改给绝对路径.
+
+2.3 模糊搜索 扫描出的 目录名及文件名或 文件对应的标题内容信息.
+
+2.4 增加一键添加配置文件功能: 将选中的配置文件添加到 主页面左框-配置文件中.
+
+2.5 添加右键 复制文件名 及绝对路径功能.
