feat: 添加SDK固件研究文档和文件读取强制规则
主要更新：
1. 新增文件读取强制规则（最高优先级）
   - 创建 file-reading.instructions.md
   - 严禁AI偷懒不读文件就推测
   - 基于TI雷达SDK分析的实际案例

2. 新增SDK固件研究完整文档（11个Part）
   - Part1: SDK基础概念与三目录详解
   - Part2-9: 各模块详细分析
   - Part10-11: MMWAVE_L_SDK和mmWave Studio深度解析

3. 更新核心规则文件
   - copilot-instructions.md: 添加文件读取为第0优先级
   - instructions/README.md: 更新规则列表

4. 目录调整
   - 删除旧的05-雷达配置文件研究目录
   - 重组为05-SDK固件研究目录

相关issue: AI偷懒推测导致文档错误问题

--- a/项目文档/1-需求与设计/雷达配置参数研究提示词.md
+++ b/项目文档/1-需求与设计/雷达配置参数研究提示词.md
@@ -17,11 +17,11 @@
 
 1.勾选自定义参数时,
 
-2.bug:
+2.0: 命令分类后面的?必需/?总没有意义,删除掉.每个命令前面方框(必需及非必需标记))去掉,
 
-2.1选择命令无法分类折叠.
+2.1 bug修复选择命令无法分类折叠.
 
-2.2 命令选择后, 发送配置执行为灰色.
+2.2 bug修复:命令选择后, 发送配置执行为灰色, 正确的逻辑是命令选择后为正常可以发送的按钮
 
 2.3 命令选择后, 测试名称为之前的模板名字, 建议为自定义配置,测试模板中自动变为自定义配置
 
@@ -34,9 +34,26 @@
 8. 配置文件参数解释 下增加一个 参数调优建议
 9. 配置命令中可以看到行数,但此行数非命令内容.导出配置文件时,不要把行数做为内容.
 
-项目文档\3-固件工具\06-雷达配置参数研究\雷达配置文件深度分析.md, 更新此文件,根据知识库, c:\ti, ti网络网站资料,
 
-1. 解释雷达配置文件的作用,流程机制, 配置文件命令执行机制.
-2. 目前雷达配置文件为暂停的,插拔消失, 如果需要永久注入, 如何注入, 如何重新注入.
+项目文档\3-固件工具\06-雷达配置参数研究\radar_test_gui.py  v1.1.2
 
-2 命令后的参数按照列表解释每一位:中文解释,参数格式,数据类型,命令值,实际表达值,作用,完善每个命令中每个参数的范围极限,常用推荐值, 调优值,示例,功能,重要性,说明.  另外完善配置解释中的性能指标, 增加参数值,参数值对应说明表达的作用实际值
+0.更新完脚本后,更新主程序的版本号
+
+1. bug修复:命令选择后, 发送配置执行为灰色, 正确的逻辑是命令选择后为正常可以发送的按钮
+2. 注释输入框 里面的内容可以根据命令自动生成注释,也可以手动修改
+
+
+项目文档\3-固件工具\06-雷达配置参数研究\radar_test_gui.py  v1.1.3
+
+0.更新完脚本后,更新主程序的版本号
+
+1. 任何情况下, 发送配置执行及停止雷达按钮均可以执行.
+2. 如果串口未连接,弹出是否连接的提示,如果确认连接后,检测串口是否连接,返回结果,然后继续
+
+
+项目文档\3-固件工具\06-雷达配置参数研究\radar_test_gui.py  v1.1.4
+
+0.更新完脚本后,更新主程序的版本号
+
+1. 选择命令的分类仍然无法折叠,bug依然在
+2. 配置命令区在V1.1.1中要求有行号标记,但仍然无行号标记.(配置命令框中可以看到行数,但此行数非命令内容.导出配置文件时,不要把行数做为内容.)
